<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2012, AIOI・SYSTEMS CO., LTD.
    All rights reserved.

	Redistribution and use in source and binary forms, with or without modification,
	are permitted provided that the following conditions are met:

	1. Redistributions of source code must retain the above copyright notice,
	this list of conditions and the following disclaimer.

	2. Redistributions in binary form must reproduce the above copyright notice,
	this list of conditions and the following disclaimer in the documentation
	and/or other materials provided with the distribution.

	THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
	AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
	THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
	PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS
	BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY,
	OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
	SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
	INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
	STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
	ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY
	OF SUCH DAMAGE.
-->
<resources>

    <string name="app_name">SMART TAG Sample</string>
	<string name="scanTagPrompt">Touch your SMART-TAG!</string>
    <string name="showUserImagePrompt">Show Registered image</string>
	<string name="msgCannotStart">FeliCa processing was not able to be started.</string>
	<string name="drawTextPrompt">Show text</string>
	<string name="msgProcessing">Wait, processing...</string>
	<string name="msgDone">Done</string>
	<string name="msgIoError">I/O error. Tag again!</string>
	<string name="backPrompt">Back</string>
	<string name="msgLineLimit">You can input up to 4 lines.</string>
	<string name="clearPrompt">Clear</string>
	<string name="msgTouchToEdit">[Touch here to input...]</string>
	<string name="cameraImagePrompt">Show snapshot</string>
	<string name="saveLayoutPrompt">Register current image</string>
	<string name="layoutNoPrompt">No.</string>
	<string name="layoutSelectionPrompt">Select the register number</string>
	<string name="msgTapToSnap">* Tap the screen to snap...</string>
	<string name="savePrompt">Apply</string>
	<string name="msg_nfcDisabled">NFC reader/writer was not found.</string>
	<string name="writeDataPrompt">Save URL</string>
	<string name="openUrlPrompt">Open URL</string>
	<string name="msgCaution1">*When tag is touched, automatically goes to saved URL.</string>
	<string name="urlPrompt">URL: <small>(*Touch URL and Edit)</small></string>
	<string name="showStatusPrompt">Show status</string>
</resources>
