<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2012, AIOI・SYSTEMS CO., LTD.
    All rights reserved.

	Redistribution and use in source and binary forms, with or without modification,
	are permitted provided that the following conditions are met:

	1. Redistributions of source code must retain the above copyright notice,
	this list of conditions and the following disclaimer.

	2. Redistributions in binary form must reproduce the above copyright notice,
	this list of conditions and the following disclaimer in the documentation
	and/or other materials provided with the distribution.

	THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
	AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
	THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
	PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS
	BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY,
	OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
	SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
	INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
	STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
	ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY
	OF SUCH DAMAGE.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5px" >

        <TextView
            android:id="@+id/errorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textSize="28sp" android:textColor="#8ede21"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </FrameLayout>

    <TextView
        android:id="@+id/idmView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginLeft="10sp"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10px"
        android:layout_weight="1" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_marginTop="10px" >

            <RadioButton
                android:id="@+id/radioShowStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/showStatusPrompt"
                android:textSize="24sp" android:checked="true" />

            <RadioButton
                android:id="@+id/radioShowCameraImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/cameraImagePrompt"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/cameraItemLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="38sp" >

                <ImageButton
                    android:id="@+id/cameraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera" />

                <ImageView
                    android:id="@+id/cameraPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RadioButton
                android:id="@+id/radioDrawText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/drawTextPrompt"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/userTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36sp"
                android:layout_marginRight="18sp"
                android:text="TextView"
                android:textSize="24sp" android:textColor="#8ede21"/>

            <RadioButton
                android:id="@+id/radioSaveImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/saveLayoutPrompt"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/saveImageLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="36sp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/layoutNoPrompt"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/saveNoList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1" />
            </LinearLayout>

            <RadioButton
                android:id="@+id/radioShowUserImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/showUserImagePrompt"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/selectImageLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="36sp" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/layoutNoPrompt"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/layoutNoList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1" />
            </LinearLayout>

            <RadioButton
                android:id="@+id/radioWriteData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/writeDataPrompt" android:textSize="24sp"/>

            <LinearLayout
                android:id="@+id/writeDataLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                 android:layout_marginLeft="36sp"
                 android:layout_marginRight="10sp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/urlPrompt"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/urlTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="18sp"
                    android:layout_weight="1"
                    android:text="http://aioismarttag.com/"
                    android:textSize="24sp" android:layout_marginLeft="10sp" android:textColor="#8ede21"/>

            </LinearLayout>

			<RadioButton
			    android:id="@+id/radioReadData"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/openUrlPrompt"
			    android:textSize="24sp"
			    android:layout_marginTop="10sp" />

			<TextView
			    android:id="@+id/caution1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="36sp"
			    android:text="@string/msgCaution1" android:textColor="#FFFF00"/>
        </RadioGroup>
    </ScrollView>

</LinearLayout>
